--- a/SphericalShell/Split_into_Functions/OpenMC_SS_YAML.yaml
+++ b/SphericalShell/Split_into_Functions/OpenMC_SS_YAML.yaml
@@ -12,5 +12,17 @@ settings_info :
     total_batches : 10
     inactive_batches : 1
     num_particles : 10000
-    run_mode : fixed source 
-        
+    run_mode : fixed source
+
+depletion_params :
+    chain_file : chain_endfb71_sfr.xml
+    times_post_boc : #sequence of timesteps following the beginning of operation (not cumulative)
+        - 3.0E+8 
+        - 86400 
+        - 2.6E+6 
+    source_rates : 
+        - 1.0E+18 
+        - 0
+        - 0
+    norm_mode : source_rate    
+    timestep_units : s
