--- a/WC_Layers/PhotonTransport_Inputs.yaml
+++ b/WC_Layers/PhotonTransport_Inputs.yaml
@@ -1,10 +1,16 @@
 filename_dict :
     alara_el_lib : elelib.std
     mesh_file_openmc : OpenMC_Mesh.h5m
+    sp_filename : statepoint.10.h5
+    figure_filename : Photon_flux_vs_energy.png
+    vtk_filename : Photon_Flux.vtk
 
 file_indices: 
     source_mesh_index : 0
-
+    flux_spectrum_tally_id : 2
+    mesh_number : 1
+    energy_filter_index : 2
+    
 source_info :
     phtn_e_bounds :
         - 0
@@ -51,7 +57,12 @@ tally_info :
          - C
 
 settings_info :
-     particles : 100000
+     particles : 10000
      batches : 10
-     inactive_batches : 1
+     inactive_batches : 0
      run_mode : fixed source
+    
+summed_axes_energy_filter : (0, 1, 3, 4, 5, 6)
+summed_axes_mesh_filter : (0,2,3,4,5,6) 
+summed_axes_dose_filter : (0,1,2,3,4,5)
+coeff_geom : 'ISO'    
